objects/Guardant_360_Sample__c.object
<CustomObject>
    <description>Used to capture relative TRF and sample data from LIMS.</description>
    <fields>
        <fullName>ACCA_Notification_Sent__c</fullName>
        <label>ACCA Notification Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accession_Date__c</fullName>
        <label>Accession Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_AE__c</fullName>
        <formula>Account__r.Owner.FirstName + &apos; &apos; +  Account__r.Owner.LastName</formula>
        <label>Account Exec.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Case_Safe_ID__c</fullName>
        <formula>Account__r.Case_Safe_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Class__c</fullName>
        <formula>TEXT(Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ordering account&apos;s Reporting country</inlineHelpText>
        <label>Reporting Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_GHI__c</fullName>
        <formula>Account__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GHI #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_IRB_Date__c</fullName>
        <formula>Account__r.IRB_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from the field &apos;IRB Date&apos; from the sample&apos;s account. Used only for VISION Study samples</inlineHelpText>
        <label>Account IRB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Integration_Baseline__c</fullName>
        <formula>IF( 
AND( 
Account__r.Account_Integration_Target__c=TRUE,
Contact__r.GRO_Tool__c=TRUE,
OR( 
ISBLANK(Contact__r.Account_Integration_Commitment_Date__c), 
Date_Received__c&lt;Contact__r.Account_Integration_Commitment_Date__c)), 
TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if contact is part of AIT program but hasn&apos;t committed yet or sample was received before commitment</inlineHelpText>
        <label>Account Integration Baseline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Integration_Sample__c</fullName>
        <formula>IF(
AND(
Account__r.Account_Integration_Target__c=TRUE,
NOT(ISBLANK(Contact__r.Account_Integration_Commitment_Date__c)),
Date_Received__c&gt;Contact__r.Account_Integration_Commitment_Date__c),
TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TRUE if the sample was received after the contact&apos;s Account Integration Commitment Date (after the contact committed to the Account Integration program).</inlineHelpText>
        <label>Account Integration Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_MSL__c</fullName>
        <formula>Account__r.Account_MSL__r.FirstName + &quot; &quot; +Account__r.Account_MSL__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from account&apos;s &apos;Account MSL&apos; field</inlineHelpText>
        <label>Account MSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Account__r.Territory_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from &apos;Territory Region&apos; field on Account</inlineHelpText>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Reporting_Zip__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reporting Zip Code from the associated account. Used to determine territory alignment.</inlineHelpText>
        <label>Account Reporting Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Trial_Site_Number__c</fullName>
        <formula>Account__r.Trial_Site_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>derived from account&apos;s Trial Site Number</inlineHelpText>
        <label>Account Trial Site Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account__r.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Guardant Samples (Account)</relationshipLabel>
        <relationshipName>Guardant_360_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_passed_IRB__c</fullName>
        <description>Compares Blood Collection date to Account IRB Date. For VISION study</description>
        <formula>IF( Blood_Collection_Date__c&gt;=Account_IRB_Date__c,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account passed IRB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acct_MSL__c</fullName>
        <formula>TEXT(Account__r.MSL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from account&apos;s &apos;MSL&apos; field</inlineHelpText>
        <label>Acct MSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Sample__c</fullName>
        <formula>IF(
AND(Account__c&lt;&gt;Contact__r.AccountId,
Contact__r.GRO_Tool__c=TRUE,
Account__r.Account_Integration_Target__c=TRUE),
TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field. TRUE if this sample doesn&apos;t come from contact&apos;s main account, and if contact is an Account Integration Target.</inlineHelpText>
        <label>Affiliation Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alteration__c</fullName>
        <label>Alteration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assession_Dupe_Check__c</fullName>
        <label>Accession # Dupe Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Basic_Report_Released_email_sent__c</fullName>
        <description>Used to identify when the Basic Report Released email was sent to physician.</description>
        <label>Basic Report Released Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <description>Bill to values sent to SFDC for ERP integration, business logic controlled in LIMS based on Billing Rules.</description>
        <label>Bill To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Trial: ROW</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial : US</fullName>
                </value>
                <value>
                    <fullName>DirectBill : US</fullName>
                </value>
                <value>
                    <fullName>Distributors : ROW</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Clinical Utility</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - LUNAR</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Medical Affairs</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Pharma</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Proficiency</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Promotional</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - Quality Testing</fullName>
                </value>
                <value>
                    <fullName>Do Not Bill - ROW</fullName>
                </value>
                <value>
                    <fullName>Financial Indigent</fullName>
                </value>
                <value>
                    <fullName>Institutional Billing</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharma : US</fullName>
                </value>
                <value>
                    <fullName>Pharma : ROW</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan</fullName>
                </value>
                <value>
                    <fullName>Private Insurance/Employee Health Plan No OOP</fullName>
                </value>
                <value>
                    <fullName>Requesting Physician</fullName>
                </value>
                <value>
                    <fullName>Research : ROW</fullName>
                </value>
                <value>
                    <fullName>Research : US</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Patient</fullName>
                </value>
                <value>
                    <fullName>Self-Pay Sponsored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bio_Banked_Account__c</fullName>
        <formula>Account__r.Bio_Bank__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked means this sample belongs to an account whose samples are stored and not processed immediately. When checked, delayed-report cases will not be generated for samples for this account.</inlineHelpText>
        <label>Bio-Banked Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blood_Collection_Date__c</fullName>
        <label>Blood Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Boomi_Key__c</fullName>
        <externalId>true</externalId>
        <label>Boomi Key</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH1_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH1 Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CORE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CORE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRC_Email_sent__c</fullName>
        <description>Used to identify when the CRC Patient Email was sent to physician.</description>
        <label>CRC Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Commission_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation Commission Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Category__c</fullName>
        <label>Cancer Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bladder</fullName>
                </value>
                <value>
                    <fullName>Brain</fullName>
                </value>
                <value>
                    <fullName>Breast</fullName>
                </value>
                <value>
                    <fullName>Cervix</fullName>
                </value>
                <value>
                    <fullName>Endometrial/Uterine</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>Head &amp; Neck</fullName>
                </value>
                <value>
                    <fullName>Kidney</fullName>
                </value>
                <value>
                    <fullName>Lung</fullName>
                </value>
                <value>
                    <fullName>Ovarian</fullName>
                </value>
                <value>
                    <fullName>Skin</fullName>
                </value>
                <value>
                    <fullName>Soft Tissue/Bone</fullName>
                </value>
                <value>
                    <fullName>Thyroid</fullName>
                </value>
                <value>
                    <fullName>Urogenital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancer_Class__c</fullName>
        <label>Cancer Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Stage__c</fullName>
        <label>Cancer Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Type__c</fullName>
        <label>Cancer Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to initiate changes to samples</description>
        <label>Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Trial__c</fullName>
        <inlineHelpText>N/A =  No Alteration found or Alteration was found and the sample was NOT submitted to N of 1.</inlineHelpText>
        <label>Clinical Trial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_2020_Lung_Quintile__c</fullName>
        <formula>TEXT( Contact__r.X2020_Lung_Rank__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: 2020 Lung Quintile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2020_MD_Universe__c</fullName>
        <formula>Contact__r.X2020_MD_Universe__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: 2020 MD Universe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_2020_Pan_Cancer_Quintile__c</fullName>
        <formula>TEXT( Contact__r.X2020_Pan_Cancer_Rank__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: 2020 Pan-Cancer Quintile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2020_Tier__c</fullName>
        <formula>TEXT( Contact__r.X2020_Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: 2020 Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Breast_Prescriber__c</fullName>
        <formula>Contact__r.Breast_Prescriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: Breast Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_CRC_Prescriber__c</fullName>
        <formula>Contact__r.CRC_Prescriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: CRC Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Case_Safe_ID__c</fullName>
        <formula>Contact__r.Case_Safe_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <formula>Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Lung_Prescriber__c</fullName>
        <formula>Contact__r.Lung_Prescriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: Lung Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Marketable_User__c</fullName>
        <formula>Contact__r.Marketable_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: Marketable User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_NPI__c</fullName>
        <formula>Contact__r.Actual_NPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from contact&apos;s NPI</inlineHelpText>
        <label>Contact NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Prostate_Prescriber__c</fullName>
        <formula>Contact__r.Prostate_Prescriber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact: Prostate Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <formula>TEXT(Contact__r.Contact_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guardant 360 Samples</relationshipLabel>
        <relationshipName>Guardant_360_Samples</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Sample__c</fullName>
        <formula>IF ( 
Date_Received__c &gt;  Contact__r.Account.Sales_Contract__r.Effective_Date__c &amp;&amp;
(
ISPICKVAL(Billing_Type__c,&quot;Medicare&quot;)&amp;&amp; ISPICKVAL( Contact__r.Account.Sales_Contract__r.Contract_Coverage__c, &quot;Medicare Only&quot;) ||
ISPICKVAL(Contact__r.Account.Sales_Contract__r.Contract_Coverage__c, &quot;All Samples&quot; )
)

, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courtesy_Call_Task_Process__c</fullName>
        <description>Used for Scheduled Record Update</description>
        <label>Courtesy Call Task Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtesy_Call_Task_Skip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a Med Affairs Courtesy Call task was already created. Used to prevent duplicate tasks. ENT-3979</description>
        <label>Courtesy Call Task Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Delayed_Sample_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Delayed Sample Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_New_Prior_Auth_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test field. Currently for UA testing only.</description>
        <inlineHelpText>Test field; no functionality in place</inlineHelpText>
        <label>Create New Prior Auth Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSM_Email__c</fullName>
        <formula>Account__r.Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Coll_alpha__c</fullName>
        <formula>IF(
Day(Blood_Collection_Date__c)&gt;9,
TEXT(Day(Blood_Collection_Date__c)) +&quot; &quot;+ Month_Coll_Date__c  +&quot; &quot; + TEXT(Year(Blood_Collection_Date__c)),
&apos;0&apos;+TEXT(Day(Blood_Collection_Date__c)) +&quot; &quot;+ Month_Coll_Date__c  +&quot; &quot; + TEXT(Year(Blood_Collection_Date__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from Blood Collection date. Used for VISION sample reports. AB 7/31/18</inlineHelpText>
        <label>Date Coll alpha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Final_Alpha__c</fullName>
        <description>Used for alphanumeric conversion</description>
        <formula>IF(
Day(Final_Report_Date__c)&gt;9,
TEXT(Day(Final_Report_Date__c))+&quot; &quot;+Month_Final_Report__c +&quot; &quot;+TEXT(Year(Final_Report_Date__c)),
&apos;0&apos;+TEXT(Day(Final_Report_Date__c))+&quot; &quot;+Month_Final_Report__c +&quot; &quot;+TEXT(Year(Final_Report_Date__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Final Alpha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Recd_Alpha__c</fullName>
        <description>Used for alphanumeric conversion</description>
        <formula>IF(
Day(Date_Received__c)&gt;9,
TEXT(Day(Date_Received__c)) +&quot; &quot;+ Month_Date_Recd__c +&quot; &quot; + TEXT(Year(Date_Received__c)),
&apos;0&apos;+TEXT(Day(Date_Received__c)) +&quot; &quot;+ Month_Date_Recd__c +&quot; &quot; + TEXT(Year(Date_Received__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Recd Alpha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Svc_alpha__c</fullName>
        <description>Used for alphanumeric conversion</description>
        <formula>IF(
Day(Date_of_Service__c)&gt;9,
TEXT(Day(Date_of_Service__c)) +&quot; &quot;+ Month_Date_Service__c +&quot; &quot; + TEXT(Year(Date_of_Service__c)),
&apos;0&apos;+TEXT(Day(Date_of_Service__c)) +&quot; &quot;+ Month_Date_Service__c +&quot; &quot; + TEXT(Year(Date_of_Service__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Svc alpha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>Today() - Date_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Contact_Sample__c</fullName>
        <formula>Date_Received__c - Previous_Date_Received_Contact__c</formula>
        <label>Days Since Last Contact Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delayed_Sample_Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was a Delayed Sample Case Created for this sample?</inlineHelpText>
        <label>Delayed Sample Case Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derived_Portal_Link_for_MD__c</fullName>
        <description>Removes blank spaces from fields to allow in PB</description>
        <formula>&quot;https://portal.guardanthealth.com/patients/&quot;+LIMS_Derived_Pt_ID__c+&quot;?cache_reset=true&amp;request_id=&quot;+Name_Derived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derived Portal Link for MD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Mgr_Email__c</fullName>
        <label>District Mgr Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Do_not_contact__c</fullName>
        <formula>Contact__r.DO_NOT_CONTACT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Do not contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_Patient_Report__c</fullName>
        <formula>HYPERLINK(&quot;https://portal.guardanthealth.com/r/&quot; + Name,&quot;Download Patient Report&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>East__c</fullName>
        <description>Hidden field. Used to determine if a sample is either NCCN East or NCI East.</description>
        <formula>IF (
   OR(
   (NCCN_East__c=TRUE),
   (ISPICKVAL(Account__r.NCI_Region__c,&quot;East&quot;)),
   (ISPICKVAL(Account__r.NCCN_Region__c,&quot;East&quot;))), &quot;East&quot;, &quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>East</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elite_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elite Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fellowship_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fellowship Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Report_Date__c</fullName>
        <label>Final Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GHI_002779_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GHI-002779 Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICD_10__c</fullName>
        <label>ICD 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_1__c</fullName>
        <label>ICD 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICD_2__c</fullName>
        <label>ICD 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <description>This is Primary Insurance Company on the Patient record. Filled via workflow &apos;Update Ins Co&apos;</description>
        <label>Insurance Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Case_Comments__c</fullName>
        <label>LIMS Case Comments</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LIMS_Derived_Pt_ID__c</fullName>
        <description>Removes breaks/spaces from LIMS Patient ID field to allow use in processes. See https://success.salesforce.com/issues_view?id=a1p300000008YkZAAU</description>
        <formula>TRIM(LIMS_Patient_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIMS Derived Pt ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Length__c</fullName>
        <formula>LEN( LIMS_Derived_Pt_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIMS Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LIMS_Patient_ID__c</fullName>
        <description>Unique patient identifier from LIMS DM.</description>
        <label>LIMS Patient ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Project_ID__c</fullName>
        <label>LIMS Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Project_ID_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LIMS Project ID - Lookup</label>
        <referenceTo>LIMS_Project_ID__c</referenceTo>
        <relationshipLabel>Guardant Samples</relationshipLabel>
        <relationshipName>Guardant_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LIMS_Request_Record_ID__c</fullName>
        <label>LIMS Request Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lamp__c</fullName>
        <formula>IF ( Physician_SL_Percent__c &gt; 0.99, IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Red&quot;),
IF ( Physician_SL_Percent__c &gt; 0.80, IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Yellow&quot;),
IF ( Physician_SL_Percent__c &gt; 0.60, IMAGE(&quot;/img/msg_icons/info32.png&quot;, &quot;Yellow&quot;),

IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Green&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lamp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sample_Recd_Contact__c</fullName>
        <formula>Contact__r.Last_Sample_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field. Used to check Previous Date Received-Contact field</inlineHelpText>
        <label>Last Sample Recd Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Report_Date__c</fullName>
        <label>Latest Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Low_MAF_Email_sent__c</fullName>
        <description>Used to identify when the Low MAF email was sent to physician.</description>
        <label>Low MAF Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Low_MAF__c</fullName>
        <label>Low MAF</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lung_Cancer_email_1__c</fullName>
        <description>Used to identify when the Lung Cancer Email 1 was sent to physician.</description>
        <label>Lung Cancer email 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lung_Cancer_email_2__c</fullName>
        <description>Used to identify when the Lung Cancer Email 2 was sent to physician.</description>
        <label>Lung Cancer email 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lung_Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lung Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Task_Closed__c</fullName>
        <label>MA Task Closed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Task_Completed__c</fullName>
        <description>NS:08/14/18 This field is used to track the Stale Tester alert process</description>
        <label>MA Task Completed for Stale Tester</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>